unpackaged/main/default/objects/ccpe_r__Retainer__c/ccpe_r__Retainer__c.object-meta.xml
<CustomObject>
    <label>Retainer</label>
    <nameField>
        <displayFormat>Ret{00000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>