unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Account__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that the retainer is related to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retainers</relationshipLabel>
    <relationshipName>Retainers</relationshipName>
    <type>Lookup</type>
</CustomField>