unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Current_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Current_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>