unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Current_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>