unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Description__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>