unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__End_Date__c</fullName>
    <description>The date signifies the end date of the retainer after which no more line items can be created</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>