unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Hours_Balance__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hours_Balance__c</fullName>
    <description>The remaining hours that can be assigned to work for this Retainer</description>
    <formula>ccpe_r__Hours_Gross__c - ccpe_r__Current_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>