unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Hours_Gross__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hours_Gross__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of hours available for Work for this Retainer</description>
    <label>Hours Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>