unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Hours_Roll_Over__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hours_Roll_Over__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the retainer hours roll over between time periods for the client</description>
    <label>Hours Roll Over</label>
    <type>Checkbox</type>
</CustomField>