unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__isActive__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__isActive__c</fullName>
    <formula>ccpe_r__Start_Date__c &lt;= TODAY() &amp;&amp; (ISBLANK(ccpe_r__End_Date__c) || ccpe_r__End_Date__c &gt; TODAY())</formula>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>