unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity that the retainer is related to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Retainers</relationshipLabel>
    <relationshipName>Retainers</relationshipName>
    <type>Lookup</type>
</CustomField>