unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Spend_Balance__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Spend_Balance__c</fullName>
    <description>The amount that is available to spend on new Work for this Retainer</description>
    <formula>ccpe_r__Spend_Gross__c - ccpe_r__Current_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>