unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Spend_Gross__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Spend_Gross__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount this Retainer can spend</description>
    <label>Spend Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>