unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Spend_Roll_Over__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Spend_Roll_Over__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the retainer spend rolls over between time periods for the client</description>
    <label>Spend Roll Over</label>
    <type>Checkbox</type>
</CustomField>