unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Start_Date__c</fullName>
    <description>The start date signifies when a retainer can first be used</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>