unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Template__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this retainer acts as a template for new retainer creation</description>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>