unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Time_Period__c</fullName>
    <label>Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>