unpackaged/main/default/objects/ccpe_r__Retainer__c/fields/ccpe_r__Type__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Type__c</fullName>
    <description>Denotes if the retainer is skill based or global based in nature</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>