unpackaged/main/default/objects/ccpe_r__Retainer__c/recordTypes/ccpe_r__Non_Skill_Based.recordType-meta.xml
<RecordType>
    <fullName>ccpe_r__Non_Skill_Based</fullName>
    <active>true</active>
    <description>A non-skill based Retainer</description>
    <label>Non-Skill Based</label>
</RecordType>