unpackaged/main/default/objects/ccpe_r__Retainer__c/recordTypes/ccpe_r__Skill_Based.recordType-meta.xml
<RecordType>
    <fullName>ccpe_r__Skill_Based</fullName>
    <active>true</active>
    <description>A skill based Retainer.</description>
    <label>Skill Based</label>
</RecordType>