unpackaged/main/default/objects/ccpe_r__Retainer__c/recordTypes/ccpe_r__Skills_Based.recordType-meta.xml
<RecordType>
    <fullName>ccpe_r__Skills_Based</fullName>
    <active>false</active>
    <label>Skills Based</label>
</RecordType>