unpackaged/main/default/objects/ccpe_r__Retainer__c/validationRules/ccpe_r__One_Time_Retainers_Do_Not_Roll_Over.validationRule-meta.xml
<ValidationRule>
    <fullName>ccpe_r__One_Time_Retainers_Do_Not_Roll_Over</fullName>
    <active>true</active>
    <description>A one-time Retainer cannot roll-over</description>
    <errorConditionFormula>ISPICKVAL(ccpe_r__Time_Period__c, &#39;One Time&#39;) &amp;&amp; (ccpe_r__Spend_Roll_Over__c == true || ccpe_r__Hours_Roll_Over__c == true)</errorConditionFormula>
    <errorMessage>One-time Retainers cannot roll over</errorMessage>
</ValidationRule>