unpackaged/main/default/objects/ccpe_r__Retainer__c/listViews/ccpe_r__All.listView-meta.xml
<ListView>
    <fullName>ccpe_r__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>ccpe_r__Start_Date__c</columns>
    <columns>ccpe_r__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>